deploy/challenge-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-api
  namespace: kube-hello-kiali
  labels:
    app: challenge-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challenge-api
  template:
    metadata:
      labels:
        app: challenge-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: challenge-api
          image: ghcr.io/dgkim-lab/kube-hello-kiali-challenge-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
