deploy/challenge-api/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: challenge-api
  namespace: kube-hello-kiali
spec:
  host: challenge-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
