deploy/challenge-api/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: challenge-api
  namespace: rps
spec:
  hosts:
    - challenge-api
  http:
    - route:
        - destination:
            host: challenge-api
            port:
              number: 8080
